# DM2

./: .gitignore  LICENSE  README.md  denoised_random_sio2_300_demo.extxyz  pyproject.toml
demo/: denoise_train_conditional.py  denoiser_train.py
demo/demo_generating/: denoise_generate_conditional.py  denoise_generate_unconditional.py
demo/demo_training/: denoise_train_conditional.py  denoiser_train_unconditional.py
demo/model/: gen-a-sio2-cond-v1.pt  gen-a-sio2-uncond-v1.pt
model/: gen-cu50zr50-v1.pt
src/graphite/nn/models/: e3nn_nequip.py  e3nn_nequip_improved.py  t_para_backup.py
src/graphite/transforms/: downselect_edges.py  rattle_particles.py
